# claude-anyllm

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  pyproject.toml  test.py
atlas_proxy/: anthropic.py  atlas.py  config.py  errors.py  logging_utils.py  server.py  validation.py
tests/: test_anthropic_bridge.py  test_atlas_client.py  test_config.py  test_server.py  test_validation.py
